Add 'rules' collection
- They render as pages under '/rules'.

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,15 @@ github_username:  jlapolla
 
 # Build settings
 markdown: kramdown
+
+collections:
+  rules:
+    output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: rules
+    values:
+      layout: "rule"
