--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ markdown: kramdown
 collections:
   rules:
     output: true
+  tags:
+    output: true
 
 defaults:
   -
@@ -27,3 +29,9 @@ defaults:
       type: rules
     values:
       layout: "rule"
+  -
+    scope:
+      path: ""
+      type: tags
+    values:
+      layout: "tag"
