Use pretty links in rules and tags
- Everything now has a trailing slash instead of a file extension.

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,11 @@ defaults:
       type: rules
     values:
       layout: "rule"
+      permalink: /:collection/:path/
   -
     scope:
       path: ""
       type: tags
     values:
       layout: "tag"
+      permalink: /:collection/:path/
