--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Design rules for effective software development.
 baseurl: "/software-design-rules" # the subpath of your site, e.g. /blog
 url: "https://jlapolla.github.io" # the base hostname & protocol for your site
-github_username:  jlapolla
+github_username: jlapolla
+github_project: software-design-rules
 
 # Build settings
 markdown: kramdown
