Fix code samples breaking the build
- It has to do with the default excerpt separator in Jekyll. See [this
  issue on Github][1].

[1]: https://github.com/jekyll/jekyll/issues/5596#issuecomment-262427210

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ defaults:
     values:
       layout: "code-sample"
       permalink: /code-samples/:path/
+      excerpt_separator: \{% endhighlight %\}
   -
     scope:
       path: ""
